graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_with_variables_with_default_value_list.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
query ($var1: [Int] = [1, 2, 3]) {
  field
}
