graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_with_variables_with_default_value_null.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
query ($var1: String = null) {
  field
}
